fix: adjust layout and spacing in App.vue and SectionComponent.vue for improved readability

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,10 +4,3 @@
 body {
   font-family: 'Noto Sans HK', 'Noto Sans', sans-serif;
 }
-
-#app {
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-  width: 100%;
-}
